Simple Create Form.

--- a/Views/Sellers/Index.cshtml
+++ b/Views/Sellers/Index.cshtml
@@ -5,6 +5,10 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<div>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</div>
+
 <table class="table table-striped table-hover">
     <thead class="bg-success">
         <tr>
