--- a/Views/SalesRecords/GroupingSearch.cshtml
+++ b/Views/SalesRecords/GroupingSearch.cshtml
@@ -1,5 +1,75 @@
-﻿@{
-    ViewData["Title"] = "Grouping Search";
-}
+﻿@model IEnumerable<IGrouping<Department, SalesRecord>>
+
+@{
+        ViewData["Title"] = "Grouping Search"; ViewData["Title"] = "Grouping Search";
+        DateTime minDate = DateTime.Parse(ViewData["minDate"] as string);
+        DateTime maxDate = DateTime.Parse(ViewData["maxDate"] as string);
+} 
+
 
 <h2>@ViewData["Title"]</h2>
+
+
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+        <form class="form-inline" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="minDate" class="navbar-text mr-sm-2">Min Date: </label>
+                    <input type="date" class="form-control mr-sm-2" name="minDate" value=@ViewData["minDate"]>
+                    <label for="maxDate" class="navbar-text mr-sm-2">Max Date: </label>
+                    <input type="date" class="form-control mr-sm-2" name="maxDate" value=@ViewData["maxDate"]>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Filter</button>
+        </form>
+    </div>
+</nav>
+<br />
+@foreach (var departmentGroup in Model)
+{
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Department @departmentGroup.Key.Name, Total sales = R$ @departmentGroup.Key.TotalSales(minDate, maxDate).ToString("F2")</h3>
+        </div>
+        <div class="panel-body">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr class="success">
+                        <th>
+                            Date
+                        </th>
+                        <th>
+                            Amount
+                        </th>
+                        <th>
+                            Seller
+                        </th>
+                        <th>
+                            Status
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in departmentGroup)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Date)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Amount)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Seller.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Status)
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+} 
